src/main/java/com/example/demo/Dto/Error/Response/PointParseResponse.java
package com.example.demo.Dto.Error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class PointParseResponse {
    private String code;
    private String message;
}
